added menu and sections

--- a/static/css/jscamp/responsive.styl
+++ b/static/css/jscamp/responsive.styl
@@ -1,13 +1,10 @@
-@media (min-width: 240px)
+@media (max-width: 1200px)
 	#sponsors
 		margin 0 auto
 		float none
 	#restofwebsite
-		width 90%
-	
-
-@media (min-width: 1200px)
-	#sponsors
-		float left
-	#restofwebsite
 		width 960px
+
+@media (max-width: 960px)
+	#restofwebsite
+		width 90%
