--- a/static/css/jscamp/typography.styl
+++ b/static/css/jscamp/typography.styl
@@ -3,4 +3,11 @@ h1
 	font-size 3em
 	color jscampYellow
 	font-weight bold
+	margin 0
+
+h2
+	font-family Courier
+	font-size 2.5em
+	color jscampBlue
+	font-weight bold
 	margin 10px 0
