--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,8 @@ table{border-collapse:separate;border-spacing:0;vertical-align:middle}
 caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}
 a img{border:none}
 input::-moz-focus-inner, button::-moz-focus-inner { border: 0; }
-h1{font-family:Courier;font-size:3em;color:#ffa500;font-weight:bold;margin:10px 0}
+h1{font-family:Courier;font-size:3em;color:#ffa500;font-weight:bold;margin:0}
+h2{font-family:Courier;font-size:2.5em;color:#38acec;font-weight:bold;margin:10px 0}
 #body{position:absolute;top:0;left:0;bottom:0;right:0;overflow:auto;background:-webkit-gradient(linear, left top, right bottom, color-stop(0, #d1ebff), color-stop(0.6, #fff));background:-webkit-linear-gradient(top left, #d1ebff 0%, #fff 60%);background:-moz-linear-gradient(top left, #d1ebff 0%, #fff 60%);background:-o-linear-gradient(top left, #d1ebff 0%, #fff 60%);background:-ms-linear-gradient(top left, #d1ebff 0%, #fff 60%);background:linear-gradient(top left, #d1ebff 0%, #fff 60%)}
 #logoanim{font-size:5em;font-weight:bold;font-family:Courier;position:relative;float:left;width:800px;height:450px;}
 #logoanim img{display:none}
@@ -22,14 +23,22 @@ h1{font-family:Courier;font-size:3em;color:#ffa500;font-weight:bold;margin:10px 
 #la_landscape #la_sea{color:#38acec;position:relative;-webkit-animation:sea 8s infinite ease-in-out;-moz-animation:sea 8s infinite ease-in-out;-o-animation:sea 8s infinite ease-in-out;-ms-animation:sea 8s infinite ease-in-out;animation:sea 8s infinite ease-in-out}
 #la_landscape #la_beach{color:#ffa500}
 #restofwebsite{display:none;clear:both;position:relative;margin:0 auto;width:960px}
-#sponsors{display:none;float:left;width:400px;position:relative;}
-#sponsors h1{text-align:center}
+#sponsors{display:none;float:left;width:300px;position:relative;}
+#sponsors h1{margin:10px 0;text-align:center}
+ul#sponsor-list{margin:0 0 30px 0;}
 ul#sponsor-list li{margin:0;width:100%;margin:10px;}
 ul#sponsor-list li img{display:block;margin-left:auto;margin-right:auto}
-@media (min-width: 240px){#sponsors{margin:0 auto;float:none}
-#restofwebsite{width:90%}
-}@media (min-width: 1200px){#sponsors{float:left}
+#register{font-family:Courier;font-size:2.3em;background-color:#38acec;color:#fff;padding:0 30px 7px;text-align:center;font-weight:bold;text-decoration:none;-webkit-border-radius:5px;-moz-border-radius:5px;-o-border-radius:5px;-ms-border-radius:5px;border-radius:5px;left:50%;margin:20px 0 0 40px;-webkit-transition-duration:.2s;-moz-transition-duration:.2s;-o-transition-duration:.2s;-ms-transition-duration:.2s;transition-duration:.2s;}
+#register:hover{background-color:#ffa500}
+nav{float:left;width:25%;display:block;}
+nav li{font-family:Courier;font-size:2.3em;-webkit-transition-duration:.2s;-moz-transition-duration:.2s;-o-transition-duration:.2s;-ms-transition-duration:.2s;transition-duration:.2s;margin:5px 0}
+nav a{color:#38acec;text-decoration:none;font-weight:bold;}
+nav a:hover{color:#ffa500}
+.fixed{position:fixed;top:-1px;right:0;left:0}
+#speakers,#about,#venue,#program{display:block;float:right;width:70%;height:300px}
+@media (max-width: 1200px){#sponsors{margin:0 auto;float:none}
 #restofwebsite{width:960px}
+}@media (max-width: 960px){#restofwebsite{width:90%}
 }@-moz-keyframes punch{0%{opacity:0;filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=0)}
 72%{opacity:0;filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=0)}
 75%{opacity:1;filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=100);-webkit-transform:scale(3) rotate(-3deg);-moz-transform:scale(3) rotate(-3deg);-o-transform:scale(3) rotate(-3deg);-ms-transform:scale(3) rotate(-3deg);transform:scale(3) rotate(-3deg)}
