--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@ h2{font-family:Courier;font-size:2.5em;color:#38acec;font-weight:bold;margin:10p
 #la_logo{line-height:.8em;position:absolute;top:70px;left:50px;}
 #la_logo #la_jscamp{color:#38acec}
 #la_logo #la_asia{color:#ffa500}
-#la_logo #la_undisclosured{color:#fff;background-color:#000;font-size:.58em;line-height:1em;-webkit-transform:rotate(-9deg);-moz-transform:rotate(-9deg);-o-transform:rotate(-9deg);-ms-transform:rotate(-9deg);transform:rotate(-9deg);position:relative;left:-30px;-webkit-animation:punch 1s linear;-moz-animation:punch 1s linear;-o-animation:punch 1s linear;-ms-animation:punch 1s linear;animation:punch 1s linear}
+#la_logo #la_undisclosured{color:#fff;background-color:#000;font-size:.58em;line-height:1em;-webkit-transform:rotate(-9deg);-moz-transform:rotate(-9deg);-o-transform:rotate(-9deg);-ms-transform:rotate(-9deg);transform:rotate(-9deg);position:relative;left:-.7em;-webkit-animation:punch 1s linear;-moz-animation:punch 1s linear;-o-animation:punch 1s linear;-ms-animation:punch 1s linear;animation:punch 1s linear}
 #la_logo #ls_info{font-size:.28em;line-height:1em;margin:1.5em 0 0 .6em;color:#444;-webkit-animation:fadein 1.5s linear;-moz-animation:fadein 1.5s linear;-o-animation:fadein 1.5s linear;-ms-animation:fadein 1.5s linear;animation:fadein 1.5s linear}
 #la_landscape{position:absolute;top:250px;left:-50px;font-size:3.5em;}
 #la_landscape div{position:absolute}
@@ -30,10 +30,25 @@ ul#sponsor-list li{margin:0;width:100%;margin:10px;}
 ul#sponsor-list li img{display:block;margin-left:auto;margin-right:auto}
 #register{font-family:Courier;font-size:2.3em;background-color:#38acec;color:#fff;padding:0 30px 7px;text-align:center;font-weight:bold;text-decoration:none;-webkit-border-radius:5px;-moz-border-radius:5px;-o-border-radius:5px;-ms-border-radius:5px;border-radius:5px;left:50%;margin:20px 0 0 40px;-webkit-transition-duration:.2s;-moz-transition-duration:.2s;-o-transition-duration:.2s;-ms-transition-duration:.2s;transition-duration:.2s;}
 #register:hover{background-color:#ffa500}
-nav{float:left;width:25%;display:block;}
+nav{float:left;width:25%;display:block;height:100px;position:relative;}
 nav li{font-family:Courier;font-size:2.3em;-webkit-transition-duration:.2s;-moz-transition-duration:.2s;-o-transition-duration:.2s;-ms-transition-duration:.2s;transition-duration:.2s;margin:5px 0}
 nav a{color:#38acec;text-decoration:none;font-weight:bold;}
 nav a:hover{color:#ffa500}
+nav #nav_logo{font-weight:bold;font-family:Courier;-webkit-transform:scale(3);-moz-transform:scale(3);-o-transform:scale(3);-ms-transform:scale(3);transform:scale(3);zoom:1;position:absolute;left:0;bottom:0;}
+nav #nav_logo:before,nav #nav_logo:after{content:"";display:table}
+nav #nav_logo:after{clear:both}
+nav #nav_logo #la_logo{margin-left:-50px}
+nav #nav_logo #la_undisclosured{font-size:.6em;padding:0 0 3px 0;margin-left:-3px;line-height:.5}
+nav #nav_logo #ls_info{font-size:5px;margin:10px 0 0 0}
+#social{margin:0;display:block;overflow:hidden;}
+#social li{float:left;width:60px;display:block;height:33px;}
+#social li span{display:none}
+#social li:nth-child(1){background:url("../img/facebook.png") no-repeat;}
+#social li:nth-child(1):hover{background:url("../img/facebook-hover.png") no-repeat 2px 0}
+#social li:nth-child(2){background:url("../img/twitter.png") no-repeat;}
+#social li:nth-child(2):hover{background:url("../img/twitter-hover.png") no-repeat 2px 0}
+#social li:nth-child(3){background:url("../img/email.png") no-repeat 9px 0;}
+#social li:nth-child(3):hover{background:url("../img/email-hover.png") no-repeat 11px 0}
 .fixed{position:fixed;top:-1px;right:0;left:0}
 #speakers,#about,#venue,#program{display:block;float:right;width:70%;height:300px}
 @media (max-width: 1200px){#sponsors{margin:0 auto;float:none}
