--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -200,6 +200,10 @@ nav
 			background url(../img/email.png) no-repeat 9px 0
 			&:hover
 				background url(../img/email-hover.png) no-repeat 11px 0
+	a
+		display block
+		height 100%
+		width 100%
 
 
 .fixed
